# ugli

./: .gitignore  CMakeLists.txt  README.md  build.sh  chunk_memory.h  definitions.h  entity.h  framebuffer.h  gl_includes.h  light.h  notes.txt  object.h  raytracer.h  texture.h  ugli.sln  ugli.vcxproj
freetype/freetype/config/: ftoption.h
glad/include/glad/: glad.h
glad/src/: glad.c
glm/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  glm_dummy.vcxproj  glm_dummy.vcxproj.filters
graphics/: buffer.h  camera.h  context.h  general.h  instance_manager.h  loadbmp.h  shader.h  structures.h
include/: buffer.h  camera.h  chunk_index_map.h  chunk_memory.h  context.h  definitions.h  entity.h  framebuffer.h  general.h  instance_manager.h  light.h  object.h  octree.h  ray_camera.h  raytracer.h  shader.h  split_triangle.h  stream_preprocessor.h  structures.h  text.h  texture.h  triangle.h  triangle_octree.h
lib64/: glfw3.lib
shaders/: denoise.glsl  distance_split_proto - Copy.glsl  distance_split_proto.glsl  fragment.glsl  gi_filter.glsl  light_rayshader.fragment  light_rayshader.vertex  light_rayshader2.fragment  light_rayshader2.vertex  multi_ray.glsl  ray_queue_2.glsl  raytracing.glsl  raytracing_light.glsl  raytracing_multi_bounce.glsl  raytracing_multi_bounce_buffers - Copy.glsl  raytracing_multi_bounce_buffers.glsl  raytracing_v2.0.glsl  stream_fragment.glsl  stream_vertex.glsl  vertex.glsl
src/: general.cpp  main.cpp  text.cpp
vs_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ugli.vcxproj  ugli.vcxproj.filters  ugli_proj.sln
vs_build/Debug/: ugli.ilk
vs_build/ugli.dir/Debug/ugli.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  ugli.lastbuildstate
vs_build/ugli.dir/Release/ugli.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  ugli.lastbuildstate
vs_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
vs_build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
